# collective-agent-memory

./: .gitignore  CLAUDE.md  README.md  SKILL.md  TRASH-FILES.md  install.sh  pyproject.toml
TRASH/: download_model.py  test_gliner.py
docs/features/: planned.md
scripts/: sync-sessions.sh
src/cam/: SKILL.md  __init__.py  backfill_timestamps.py  cli.py  daemon.py  entity_types.py  expand.py  init.py  providers.py  search.py  segment.py
systemd/: session-search.service  session-search.timer
tests/: test_init_memory.py  test_providers.py
